# real-time-chat

Backend/: chatapp.db  main.py  pyproject.toml
Backend/src/: db.py  dependencies.py  main.py  models.py
Backend/src/core/: config.py
Backend/src/routers/: auth.py
Backend/src/utils/: auth_utils.py
client/: package-lock.json  package.json
client/src/: App.vue  main.ts  socket.ts
client/src/components/: Chat.vue  Login.vue  MessagePanel.vue  StatusIcon.vue  User.vue
src/: chatapp.db  db.py  dependencies.py  main.py  pyproject.toml  redis_client.py  repositories.py  repository.py  schema_models.py
src/core/: config.py
src/events/: socket_events.py
src/routers/: auth.py  chat_manager.py
src/schemas/: chat.py  message.py  user.py  ws_events.py
src/utils/: auth_utils.py
